<resources>
    <string name="app_name">uDraw</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="dev_name">Elliot Mitchell</string>

    <string name="by_dev_name">by Elliot Mitchell</string>

    <!-- Menu Options -->
    <string name="new_image">New Image</string>
    <string name="import_image">Import Image</string>
    <string name="from_gallery">From Gallery</string>
    <string name="take_picture">Take Picture</string>
    <string name="save_image">Save Image</string>
    <string name="share_image">Share Image</string>
    <string name="share_screenshot">Share Screenshot</string>
    <string name="about">About</string>
    <string name="rotate">Rotate Background Image</string>
    <string name="clear">Clear Canvas</string>
    <string name="playback">Playback Drawing</string>

    <string name="playing_back">Playing Back…</string>

    <string name="undo_all_changes">Clear Page</string>
    <string name="sure_undo">Are you sure you want to erase your masterpiece?</string>

    <string name="save_picture">Save your image</string>
    <string name="image_saved_successfully">Image saved successfully</string>
    <string name="give_picture_name">Give your picture a name</string>
    <string name="file_name">Specify file name</string>
    <string name="failed_to_specify">Failed to specify file name</string>
    <string name="must_specifiy">Must specify file name</string>
    <string name="are_you_sure">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="no_bitmap">No Bitmap Provided</string>
    <string name="could_not_get_bitmap">Was not able to obtain bitmap from canvas</string>
    <string name="share_your_image">Share your image</string>
    <string name="take_or_select">Take or select a photo for background</string>
    <string name="take_photo">New</string>
    <string name="choose_existing">Existing</string>
    <string name="no_camera">No Camera</string>
    <string name="no_sd_card">No SD card</string>
    <string name="cloud_image">This is a cloud image and cannot be saved</string>
    <string name="permission_denied">Permission denied to read your External Storage</string>

    <string name="oops">Oops!</string>

    <string name="error_saving_image">An error occurred while saving your image</string>
    <string name="unable_to_store">Unable to store image on this device</string>
    <string name="save">Save</string>

    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>


</resources>
