<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.HomeActivity">

    <item
        android:id="@+id/import_image"
        android:orderInCategory="100"
        android:title="@string/import_image"
        android:icon="@drawable/ic_add_a_photo_white_36dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/share_image"
        android:orderInCategory="100"
        android:title="@string/share_image"
        android:icon="@drawable/ic_share_white_36dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/save_image"
        android:orderInCategory="100"
        android:title="@string/save_image"
        android:icon="@drawable/ic_save_white_36dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/playback"
        android:orderInCategory="100"
        android:title="@string/playback"
        android:icon="@drawable/ic_restore_page_white_36dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/rotate"
        android:orderInCategory="100"
        android:title="@string/rotate"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear"
        android:orderInCategory="100"
        android:title="@string/clear"

        android:icon="@drawable/ic_delete_white_36dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        android:icon="@drawable/ic_info_outline_white_36dp"
        app:showAsAction="never" />
</menu>
